# search

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  TESTING.md
.beads/: issues.jsonl
.claude/skills/web-search/: SKILL.md
crates/bose-common/: Cargo.toml
crates/bose-common/src/: config.rs  error.rs  lib.rs  types.rs
crates/bose-common/src/snapshots/: bose_common__types__tests__search_response_serialize.snap  bose_common__types__tests__search_result_partial_fields.snap  bose_common__types__tests__search_result_serialize.snap
crates/bose-mcp/: Cargo.toml
crates/bose-mcp/src/: main.rs
crates/bose-searxng/: Cargo.toml
crates/bose-searxng/src/: client.rs  lib.rs  response.rs
deploy/: podman-compose.yml
deploy/searxng/: settings.yml
src/: client.rs  duckduckgo.rs  exa.rs  lib.rs  main.rs  tavily.rs  types.rs
src/optimization/: connection_pool.rs  mod.rs  rate_limiter.rs  zero_copy.rs
src/processing/: context_pruner.rs  html_cleaner.rs  mod.rs
src/routing/: confidence.rs  mod.rs  semantic_router.rs  tiered_retrieval.rs
