[package]
name = "bose-security-research"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
urlencoding = "2.1"
log = "0.4"
env_logger = "0.11"
rkyv = "0.8"

[dev-dependencies]
tokio-test = "0.4"
