[workspace]
resolver = "2"
members = [
    "crates/bose-common",
    "crates/bose-searxng",
    "crates/bose-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }
url = "2"
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
insta = { version = "1.46", features = ["json", "yaml"] }
tokio-test = "0.4"
wiremock = "0.6"
schemars = "1"
