[package]
name = "bose-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
