[package]
name = "bose-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
bose-common = { path = "../bose-common" }
bose-searxng = { path = "../bose-searxng" }
rmcp = { version = "0.14", features = ["server", "transport-io", "macros"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
