[package]
name = "bose-searxng"
version.workspace = true
edition.workspace = true

[dependencies]
bose-common = { path = "../bose-common" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
wiremock = { workspace = true }
tokio-test = { workspace = true }
